# data-monday

./: README.md  pyproject.toml
healthcare-datathon/: analysis.ipynb  data-analysis-final.ipynb  data-analysis-final.ipynb (facilities_population_df) (2).csv  data-analysis-vf.ipynb  data-analysis.ipynb
healthcare-datathon/data/: health-facilities-data-kenya.csv  kenya-population-and-area-population-density_by_subcounty.csv  kenya-population-by-sex-and-county.csv  nairobi-health-facilities-locations.csv
netflix-data-analysis/: analysis.ipynb
src/data_monday/healthcare-datathon/: analysis.ipynb
src/data_monday/healthcare-datathon/data/: health-facilities-data-kenya.xlsx  nairobi-health-facilities-locations.csv
