[tool.poetry]
name = "data-monday"
version = "0.1.0"
description = "My Data Monday shenanigans at ALX Africa."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
readme = "README.md"
packages = [{include = "data_monday"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
jupyterlab = "^4.2.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
