[project]
name = "data-monday"
version = "0.1.0"
description = "My Data Monday shenanigans at ALX Africa."
authors = [{ name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com" }]
dependencies = [
    "pandas<3.0.0,>=2.2.2",
    "numpy<2.0.0,>=1.26.4",
    "scikit-learn<2.0.0,>=1.4.2",
    "matplotlib<4.0.0,>=3.9.0",
    "seaborn<1.0.0,>=0.13.2",
    "jupyterlab<5.0.0,>=4.2.0",
    "openpyxl<4.0.0,>=3.1.2",
    "plotly<6.0.0,>=5.22.0",
    "geopy<3.0.0,>=2.4.1",
    "nominatim<1.0,>=0.1",
    "folium<1.0.0,>=0.16.0",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["black<25.0.0,>=24.4.2", "ruff<1.0.0,>=0.4.4"]

[tool.pdm.build]
includes = ["data_monday"]
